Tue Dec 29 13:51:21 1998 Simon Hausmann <tronical@gmx.net>

	* initial cvs version imported

        * (aaaarghl, there are serious problems with 64 bit machines
           ... and I have _NO_ clue how to solve this :-((((((((

Sun Jan 3 16:08:47 1999 Simon Hausmann <tronical@gmx.net>

        * improved QPicture stuff (though frame still don't work -> khtml crashes :(

        * KoHTML now uses KIO to receive it's data :-D

        * started settings dialog (but it's not used yet)

Wed Jan 6 01:15:58 1999 Simon Hausmann <tronical@gmx.net>

        * making use of the scale value when drawing

        * fixes with the KIO-handling

Wed Jan 6 22:00:41 1999 Simon Hausmann <tronical@gmx.net>

        * implemented mini html-editor

        * improved settings dialog

        * implemented basic configuration stuff

        * improved KIO-handling again (error handling)

        * improved some drawing stuff